Numerous size tweaks and color changes for map

--- a/_themes/tm3/css/events.css
+++ b/_themes/tm3/css/events.css
@@ -10,13 +10,11 @@
 
 .calendar
 {
-    background-color: #162432;
-    border: 1px solid #162432;
-    color: #fff;
     font-size: 11px;
     font-weight: 700;
     margin: 0 !important;
-    right: 10px;
+    right: 0;
+    letter-spacing: 0.125rem;
     text-align: center;
     text-transform: uppercase;
     top: 3px;
@@ -26,22 +24,14 @@
 
 .calendar .day
 {
-    background-color: #fff;
     color: #162432;
     display: block;
-    font-size: 28px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 28px;
+    font-size: 36px;
+    font-weight: 200;
+    line-height: 36px;
 }
 
-.calendar .year
-{
-    background-color: #fff;
-    color: #162432;
-    display: block;
-    font-weight: 700;
-}
+.calendar .year { font-weight: 700; }
 
 .h-event .p-name
 {
@@ -81,7 +71,7 @@
 {
     .map #performance-list
     {
-        background-color: rgba(255, 255, 255, 0.5);
+        background-color: rgba(255, 255, 255, 0.9);
         bottom: 0;
         left: 0;
         margin: 0;
@@ -121,9 +111,14 @@
         white-space: nowrap;
     }
 
-    .map #performance-list .h-event.active { background-color: rgba(29, 49, 67, 0.75); }
+    .map #performance-list .h-event.active
+    {
+        background-color: rgba(29, 49, 67, 0.75);
+    }
 
-    .map #performance-list .h-event.active .p-name { color: #fff; }
+    .map #performance-list .h-event.active *,
+    .map #performance-list .h-event.active .p-name
+    { color: #fff; }
 
     .map #performance-list .h-event .calendar { top: 13px; }
 
