--- a/_themes/tm3/css/typography.css
+++ b/_themes/tm3/css/typography.css
@@ -11,7 +11,7 @@ html,
 
 body
 {
-    color: #222;
+    color: #35383D;
     font-size: 1.4rem;
     line-height: 1.57142857142857; /* 22px / 14px; (line-height / base) */
 }
