--- a/_themes/tm3/css/map.css
+++ b/_themes/tm3/css/map.css
@@ -44,19 +44,13 @@
         padding: 0;
     }
 
-    .gm-style-iw .h-event .calendar { right: 0; }
+    .gm-style-iw .h-event .calendar { right: -10px; }
 
     .gm-style-iw .h-event dt.p-name,
     .gm-style-iw .h-event .p-location
     {
         font-size: 18px;
         line-height: 24px;
-    }
-
-    .gm-style-iw .h-event .p-summary
-    {
-        max-height: 75px;
-        overflow: auto;
     }
 
     .map #map-canvas
