--- a/_themes/tm3/partials/meta.html
+++ b/_themes/tm3/partials/meta.html
@@ -2,5 +2,5 @@
 <meta charset="utf-8">
 <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 <meta content="True" name="HandheldFriendly">
-<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" name="viewport">
+<meta content="width=device-width, initial-scale=1, maximum-scale=1, minimal-ui=1, user-scalable=0" name="viewport">
 <meta content="telephone=no" name="format-detection">
