--- a/_themes/tm3/css/home.css
+++ b/_themes/tm3/css/home.css
@@ -1,49 +1,1 @@
-#live-recordings .hero::before { background: none !important; }
-
-#live-recordings-list
-{
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    position: relative;
-    z-index: 1;
-}
-
-#live-recordings-list li
-{
-    display: block;
-    height: auto;
-    margin: 0 0 15px 0;
-    padding: 0;
-    position: relative;
-    vertical-align: top;
-}
-
-#live-recordings-list li:last-of-type { border-bottom: 0; }
-
-#live-recordings-list [class*=col-] { float: left; }
-#live-recordings-list .col-1-4 { width: 25%; }
-#live-recordings-list .col-3-4 { width: 75%; }
-
-@media (min-width: 1024px)
-{
-    #live-recordings .hero
-    {
-        bottom: 0;
-        left: 0;
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
-
-    #live-recordings .col-1-2:first-of-type
-    {
-        bottom: 0;
-        left: 0;
-        position: absolute;
-        top: 0;
-        z-index: 0;
-    }
-
-    #live-recordings .col-1-2:last-of-type { float: right; }
-}
+#live-recordings { background: #EDEDED; }
