--- a/_themes/tm3/layouts/default.html
+++ b/_themes/tm3/layouts/default.html
@@ -17,22 +17,25 @@
         <title>{{ _site_name }}{{ if segment_1 }} – {{ title }}{{ endif }}</title>
     </head>
     <body>
-        <div class="fixed-hero" style="background-image: url({{ artwork }}); background-position: {{ vertical_position }} {{ horizontal_position }};"></div>
-
         {{ if enable_analytics }}
         {{ theme:partial src="google-analytics" }}
         {{ endif}}
 
+        <div class="fixed-hero" style="background-image: url({{ artwork }}); background-position: {{ vertical_position }} {{ horizontal_position }};"></div>
+
         {{ theme:partial src="header" }}
+        {{ theme:partial src="menu" }}
 
-        {{ layout_content }}
+        <div id="site-wrapper">
+            {{ layout_content }}
 
-        <!-- Scripts -->
-        {{ theme:js tag="true" }}
-        {{ if enable_audio }}{{ theme:js src="audio" tag="true" }}{{ endif }}
-        {{ if enable_map }}{{ theme:js src="map" tag="true" }}{{ endif }}
-        {{ if enable_promises }}{{ theme:js src="promise.min" tag="true" }}{{ endif }}
-        {{ if enable_blur }}{{ theme:js src="stackblur.min" tag="true" }}{{ endif }}
-        {{ if page_js }}{{ theme:js src="{ page_js }" tag="true" }}{{ endif }}
+            <!-- Scripts -->
+            {{ theme:js tag="true" }}
+            {{ if enable_audio }}{{ theme:js src="audio" tag="true" }}{{ endif }}
+            {{ if enable_map }}{{ theme:js src="map" tag="true" }}{{ endif }}
+            {{ if enable_promises }}{{ theme:js src="promise.min" tag="true" }}{{ endif }}
+            {{ if enable_blur }}{{ theme:js src="stackblur.min" tag="true" }}{{ endif }}
+            {{ if page_js }}{{ theme:js src="{ page_js }" tag="true" }}{{ endif }}
+        </div>
     </body>
 </html>
