--- a/_themes/tm3/partials/contact.html
+++ b/_themes/tm3/partials/contact.html
@@ -1,6 +1,6 @@
 <div class="hero" id="location-{{ index }}" style="background-image: url({{ artwork }});">
-    <div class="card grid-pad">
-        <h2 class="style-1">{{ title }}</h2>
+    <div class="tile light pad">
+        <h2 class="display-1">{{ title }}</h2>
 
         {{ theme:partial src="vcard" use_context="true" }}
     </div>
