--- a/_themes/tm3/partials/header.html
+++ b/_themes/tm3/partials/header.html
@@ -1,10 +1,9 @@
 <header>
     <nav role="navigation">
-        <a href="#menu" id="menu-toggle"></a>
-        <h1 id="logo">
+        <h1 class="title" id="logo">
             <a href="/">{{ _site_name }}</a>
         </h1>
 
-        {{ theme:partial src="menu" }}
+        <a href="#menu" id="menu-toggle"></a>
     </nav>
 </header>
