--- a/_themes/tm3/partials/quote.html
+++ b/_themes/tm3/partials/quote.html
@@ -1,4 +1,4 @@
-<figure class="quote">
-    <blockquote>{{ content|widont }}</blockquote>
-    <figcaption>{{ title }} <cite>{{ source }}</cite></figcaption>
+<figure class="quote {{ size }}">
+    <blockquote class="headline">{{ content }}</blockquote>
+    <figcaption class="body-2">{{ title }} <cite class="caption">{{ source }}</cite></figcaption>
 </figure>
