--- a/_themes/tm3/partials/vcard.html
+++ b/_themes/tm3/partials/vcard.html
@@ -1,5 +1,5 @@
 <dl class="vcard" id="hcard-{{ name|slugify }}">
-    {{ if name }}<dt class="fn"><strong>{{ name }}</strong></dt>{{ /if }}
+    {{ if name }}<dt class="headline fn"><strong>{{ name }}</strong></dt>{{ /if }}
     {{ if position }}<dd class="note">{{ position }}</dd>{{ /if }}
     {{ if organization }}<dd class="org">
         {{ if organization }}<div class="organization-name">{{ organization }}</div>{{ /if }}
