--- a/_themes/tm3/css/map.css
+++ b/_themes/tm3/css/map.css
@@ -10,8 +10,13 @@
 
 #map-wrapper::after
 {
+    background: -o-linear-gradient(bottom, rgba(0,0,0,0.9) 0%,rgba(0,0,0,0.01) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(bottom, rgba(0,0,0,0.9) 0%,rgba(0,0,0,0.01) 100%); /* IE10+ */
+    background: linear-gradient(to top, rgba(0,0,0,0.9) 0%,rgba(0,0,0,0.01) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#03000000', endColorstr='#000000',GradientType=0 ); /* IE6-8 */
     bottom: 0;
-    content: 'Loading Season';
+    color: #fff;
+    content: 'Loading...';
     font-size: 1rem;
     font-weight: 700;
     left: 0;
