--- a/_themes/tm3/css/menu.css
+++ b/_themes/tm3/css/menu.css
@@ -1,177 +1,39 @@
-#logo
-{
-    background-color: rgba(0, 0, 0, 0.2);
-    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-    line-height: 44px;
-    margin: 0;
-    opacity: 1;
-    padding: 0 30px;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 2;
-}
-
-#logo a
-{
-    display: block;
-    font-size: 1.35rem;
-    font-weight: 700;
-    letter-spacing: 0.2rem;
-    text-transform: uppercase;
-}
-
-#logo a,
-.checked ~ #logo a
-{
-    color: #fff;
-}
-
 #menu-toggle
 {
-    color: #fff;
     cursor: pointer;
     display: none;
-    line-height: 1.25;
     opacity: 1;
     overflow: hidden;
-    padding: 0 8px;
     position: fixed;
-    right: 15px;
+    right: 4px;
     text-align: center;
-    top: 0;
+    top: 2px;
+    width: 48px;
     z-index: 3;
-}
-
-#menu-toggle::before { font-size: 3rem; }
-
-#menu-toggle.checked,
-#menu-toggle.checked ~ #menu
-{
-    color: #fff;
-    opacity: 1;
-    visibility: visible;
-    z-index: 2000;
-    -webkit-overflow-scrolling: touch;
 }
 
 #menu
 {
-    background-color: #010101;
+    background-color: #000;
     overflow: hidden;
     padding-top: 60px;
 }
 
-#menu ul,
-#menu li
+.js #menu
 {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+    height: 100%;
+    overflow: scroll;
+    padding-top: 36px;
+    position: fixed;
+    right: 0;
+    top: 0;
+    transition: .3s ease all;
+    width: 0;
+    z-index: 2;
+    -webkit-overflow-scrolling: touch;
 }
-
-#menu li
-{
-    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-    float: none;
-}
-
-#menu li:hover
-{
-    background-color: #5A687F;
-}
-
-#menu li:last-child { border-bottom: 0; }
-
-#menu a
-{
-    color: #fff;
-    display: block;
-    font-size: 0.95rem;
-    letter-spacing: 0.3rem;
-    padding: 0 15px;
-    text-transform: uppercase;
-}
-
-#menu span
-{
-    display: block;
-    margin: 0 auto;
-}
-
-#menu [data-icon]::before
-{
-    font-size: 3rem;
-    margin-right: 10px;
-}
-
-#menu-toggle.checked ~ #logo { background-color: rgba(0, 0, 0, 0.9) !important; }
 
 .js #menu-toggle { display: block; }
 
-.js #menu
-{
-    background-color: rgba(0, 0, 0, 0.9);
-    bottom: 0;
-    left: 0;
-    opacity: 0;
-    overflow: scroll;
-    padding-top: 0;
-    position: fixed;
-    right: 0;
-    top: 44px;
-    width: 100%;
-    z-index: -1;
-}
-
-@media (min-width: 768px)
-{
-    #logo a
-    {
-        font-size: 1.95rem;
-    }
-
-    #logo,
-    #menu-toggle
-    {
-        line-height: 52px;
-    }
-
-    #menu ul
-    {
-        margin: 0 auto;
-    }
-
-    #menu li
-    {
-        float: left;
-        width: 50%;
-    }
-
-    #menu a
-    {
-        line-height: 68px;
-        padding: 0 10px;
-    }
-
-    #menu form
-    {
-        clear: both;
-    }
-
-    #menu span
-    {
-        font-size: 120%;
-        width: 80%;
-    }
-
-    #menu [data-icon]::before
-    {
-        font-size: 48px;
-    }
-
-    .js #menu
-    {
-        top: 52px;
-    }
-}
+body.checked { overflow: hidden; }
+body.checked #menu { width: 320px; }
