--- a/_themes/tm3/css/news.css
+++ b/_themes/tm3/css/news.css
@@ -4,14 +4,23 @@ article::after
     content: '';
     display: block;
     height: 1px;
-    margin: 6rem auto;
+    margin: 3rem auto;
     width: 6rem;
 }
 
 article:last-of-type::after
 {
     background-color: transparent;
-    margin-top: 3rem;
+    margin-top: 1.5rem;
 }
 
 time { font-weight: 200; }
+
+@media (min-width: 768px)
+{
+    #articles
+    {
+        margin: 0 auto;
+        max-width: 960px;
+    }
+}
