--- a/_themes/tm3/css/performances.css
+++ b/_themes/tm3/css/performances.css
@@ -39,7 +39,7 @@
     cursor: pointer;
     font-size: 22px;
     font-weight: 700;
-    padding: 5px 10px;
+    padding: 8px 16px;
     width: 100%;
     -webkit-appearance: none;
 }
@@ -51,21 +51,11 @@
     line-height: 44px;
     pointer-events: none;
     position: absolute;
-    right: 0;
+    right: 16px;
     text-align: center;
-    width: 44px;
 }
 
 @media (min-width: 768px)
 {
-    .js #year-selector-wrapper
-    {
-        left: auto;
-        top: 15px;
-        margin: 0;
-        position: absolute;
-        right: 15px;
-        width: 100px;
-        z-index: 2;
-    }
+    #content { background-color: transparent !important; }
 }
