--- a/_themes/tm3/css/premieres.css
+++ b/_themes/tm3/css/premieres.css
@@ -1,55 +1,15 @@
-#legend [data-icon]::before
-{
-    left: 20px;
-    position: absolute;
-    top: 0;
-}
-
-#legend th
-{
-    padding: 10px 30px 10px 60px;
-    position: relative;
-    vertical-align: middle;
-}
-
+#legend [data-icon]::before,
 #timeline [data-icon]::before
 {
-    font-size: 2.5rem;
+    font-size: 2rem;
+    left: 20px;
     position: absolute;
-    right: 20px;
-    top: 0;
 }
 
-#timeline th
-{
-    border: 0;
-    font-size: 1.85rem;
-    font-weight: 200;
-    letter-spacing: 0.25rem;
-    padding: 0 30px;
-    text-align: left;
-}
-
-#timeline td
-{
-    border: 0;
-    padding-bottom: 40px;
-    text-align: left;
-}
-
-#timeline li
-{
-    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-    margin-right: -3px;
-    padding: 10px 80px 10px 30px;
-    position: relative;
-    vertical-align: top;
-    width: 100%;
-}
-
-#legend, #timeline { width: 100%; }
 #timeline li:last-child { border-bottom: 0; }
 
+#timeline td,
+#timeline th { border: 0; }
 
 @media (min-width: 1024px)
 {
@@ -67,11 +27,5 @@
         position: fixed;
         top: 0;
         width: 50%;
-    }
-
-    #timeline li,
-    #timeline th
-    {
-        padding-left: 30px;
     }
 }
