--- a/_themes/tm3/css/tm3.css
+++ b/_themes/tm3/css/tm3.css
@@ -4,10 +4,10 @@
 @import url('forms.css');
 @import url('icons.css');
 @import url('images.css');
+@import url('layout.css');
 @import url('menu.css');
 @import url('quotes.css');
 @import url('tables.css');
-@import url('themes.css');
 @import url('transitions.css');
 @import url('typography.css');
 @import url('utilities.css');
