--- a/_themes/tm3/css/utilities.css
+++ b/_themes/tm3/css/utilities.css
@@ -1,19 +1,13 @@
-*, *::before, *::after { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 .center { margin: 0 auto; }
-.col-full, .col-1-1, .col-1-2, .col-1-3, .col-1-4, .col-1-5, .col-1-6, .col-1-7, .col-1-8, .col-3-8, .col-5-6, .col-6-7, .col-2-3, .col-3-4 { width: 100%; }
 .display-none { display: none !important; }
 .expand { display: block; width: 100%; }
-.js .fadein, .js .hero .quote.fadein { opacity: 1; }
-.js .fadeout { opacity: 0; }
 .fixed { bottom: 0; left: 0; position: fixed; right: 0; top: 0; }
 .float-left { float: left !important; }
 .float-right { float: right !important; }
-.grid, .grid-pad { position: relative; }
-.grid-pad { padding: 30px; }
-.aside .grid-pad { padding: 15px; }
-.grid.pad { margin: 20px 0 10px 0; }
-.negative { margin: 0 -30px; }
-.no-padding-bottom { padding-bottom: 0; }
+.js .fadein, .js .hero .quote.fadein { opacity: 1; }
+.js .fadeout { opacity: 0; }
+.positioned { position: absolute; top: 0; }
+.right { right: 0; }
 .scrollable { -webkit-overflow-scrolling: touch; }
 .text-center { text-align: center; }
 .text-left { text-align: left; }
@@ -21,27 +15,6 @@
 .width-25 { width: 25%; }
 .width-50 { width: 50%; }
 .width-75 { width: 75%; }
-
-.aside
-{
-    background-color: #35383D;
-    padding: 15px !important;
-}
-
-.grid::after,
-.grid-pad::after
-{
-    clear: both;
-    content: '';
-    display: table;
-}
-
-.no-bullets
-{
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
 
 .overflow-hidden
 {
@@ -51,28 +24,23 @@
     width: 100%;
 }
 
-.button.sample[href] { display: none; }
-
-@media (min-width: 768px)
+.vcard
 {
-    [class*='col-']
-    {
-        float: left;
-        padding-right: 30px;
-        position: relative;
-    }
+    margin: 30px 0 0 0;
+    padding: 0;
+}
 
-    [class*='col-']:last-of-type { padding-right: 0; }
+.vcard dt,
+.vcard dd
+{
+    margin: 0;
+    padding: 0;
+}
 
-    .col-1-8 { width: 12.5%; }
-    .col-1-7 { width: 14.28571429%; }
-    .col-1-6 { width: 16.66666667%; }
-    .col-1-5 { width: 20%; }
-    .col-1-4 { width: 25%; }
-    .col-1-3 { width: 33.33%; }
-    .col-1-2 { width: 50%; }
-    .col-2-3 { width: 66.66%; }
-    .col-3-4 { width: 75%; }
-    .col-7-8 { width: 87.5%; }
-    .col-full { padding-right: 0; width: 100%; }
+.vcard .email
+{
+    font-weight: 700;
+    -ms-word-break: break-all;
+    word-break: break-all;
+    word-break: break-word;
 }
