--- a/_themes/tm3/partials/article.html
+++ b/_themes/tm3/partials/article.html
@@ -1,10 +1,10 @@
 <article>
-    <h4><a class="link" href="{{ url }}">{{ title }}</a></h4>
+    <h4 class="headline"><a class="link" href="{{ url }}">{{ title }}</a></h4>
 
-    <time class="dt-start" datetime="{{ datestamp format="{{ _datetime_format }}" }}">{{ datestamp|relative }}</time>
+    <time class="body-1 dt-start" datetime="{{ datestamp format="{{ _datetime_format }}" }}">{{ datestamp|relative }}</time>
     {{ if truncate }}
-    {{ content|markdown|truncate:350 }}
+    {{ content|markdown|truncate:400 }}
     {{ else }}
     {{ content|markdown }}
-    {{ endif }}
+    {{ /if }}
 </article>
