--- a/_themes/tm3/partials/icon-list.html
+++ b/_themes/tm3/partials/icon-list.html
@@ -1,1 +1,1 @@
-<li{{ entries:listing conditions="url:{category}" folder="premiere-categories" limit="1" show_hidden="true" }} data-icon="{{ icon }}">{{ /entries:listing }}
+{{ entries:listing conditions="url:{category}" folder="premiere-categories" limit="1" show_hidden="true" }} data-icon={{ icon }}{{ /entries:listing }}
