--- a/_themes/tm3/partials/mailing-list-form.html
+++ b/_themes/tm3/partials/mailing-list-form.html
@@ -16,15 +16,15 @@
     {{ if {raven:success} }}
         <h3 class="submission-confirmation">{{ thank_you_message }}</h3>
     {{ else }}
-        <div class="grid">
+        <div class="row">
             <div class="col-full">
-                <input class="expand light" name="name" placeholder="Name" required type="text" value="{{ value:name }}">
+                <input class="expand" name="name" placeholder="Name" required type="text" value="{{ value:name }}">
             </div>
             <div class="col-full">
-                <input class="expand light" name="email" placeholder="Email" required type="email" value="{{ value:email }}">
+                <input class="expand" name="email" placeholder="Email" required type="email" value="{{ value:email }}">
             </div>
-            <div class="col-full">
-                <input class="button expand x-small" name="message-submit-button" type="submit" value="Send Message">
+            <div class="col-full text-center">
+                <input class="button link" name="message-submit-button" type="submit" value="Send Message">
             </div>
         </div>
     {{ /if }}
