--- a/_themes/tm3/partials/message-form.html
+++ b/_themes/tm3/partials/message-form.html
@@ -29,7 +29,9 @@
                 <textarea class="expand light" cols="40" name="message" placeholder="Message" required rows="5">{{ value:message }}</textarea>
             </div>
             <div class="col-full">
-                <input class="button expand x-small" name="message-submit-button" type="submit" value="Send Message">
+                <div class="text-center">
+                    <input class="button link" name="message-submit-button" type="submit" value="Send Message">
+                </div>
             </div>
         </div>
     {{ /if }}
