--- a/_themes/tm3/partials/recording.html
+++ b/_themes/tm3/partials/recording.html
@@ -1,50 +1,55 @@
-<article class="grid" id="{{ slug }}">
-    <div class="col-1-3">
-        {{ if recording_url }}<a href="{{ recording_url }}" title="{{ publisher_title }}">{{ endif }}
-        <img alt="{{ title }}" src="{{ artwork }}">
-        {{ if recording_url }}</a>{{ endif }}
-
-        {{ if show_samples && sample }}
-        <div class="grid pad text-center">
-            <a class="sample button x-small pad" href="{{ sample }}">Play Sample (MP3)</a>
-            <a class="sample button x-small pad" href="{{ sample }}">Play Sample (OGG)</a>
-        </div>
-        {{ endif }}
+<article class="row" id="{{ slug }}">
+    <div class="col-{{ if split_layout }}1-2{{ else }}1-3{{ /if }}">
+        {{ if recording_url }}<a href="{{ recording_url }}" title="{{ publisher_title }}">{{ /if }}
+            <div class="row">
+                <img alt="{{ title }}" src="{{ artwork }}">
+                {{ if show_samples && sample }}<a class="button border light sample" data-icon="play" href="{{ sample }}">Play</a>{{ /if }}
+            </div>
+        {{ if recording_url }}</a>{{ /if }}
     </div>
-    <div class="col-2-3">
-        <h3>{{ title }}</h3>
+    <div class="col-{{ if split_layout }}1-2{{ else }}2-3{{ /if }}">
+        <h3 class="{{ if split_layout }}title{{ else }}display-1{{ /if }}">{{ title }}</h3>
 
-        {{ content|markdown|widont }}
+        {{ content }}
 
-        <table class="detail-table">
+        {{ if show_details }}
+        <table>
             <tbody>
-                {{ if producer }}
-                <tr>
-                    <th>Produced By</th>
-                    {{ entries:listing conditions="url:{producer}" folder="producers" limit="1" show_hidden="true" }}
-                    <td>{{ title }}</td>
-                    {{ /entries:listing }}
-                </tr>
-                {{ endif }}
                 {{ if datestamp }}
                 <tr>
-                    <th>Release Date</th>
-                    <td>{{ datestamp format="{{ _date_format }}" }}</td>
+                    <th class="body-1 secondary-text">Release Date</th>
+                    <td class="body-1 primary-text text-right">{{ datestamp format="{{ _date_format }}" }}</td>
                 </tr>
-                {{ endif }}
+                {{ /if }}
+                {{ if producer }}
+                <tr>
+                    <th class="body-1 secondary-text">Producer</th>
+                    <td class="body-1 primary-text text-right">{{ entries:listing conditions="url:{producer}" folder="producers" limit="1" show_hidden="true" }}{{ title }}{{ /entries:listing }}</td>
+                </tr>
+                {{ /if }}
                 {{ if catalog_number }}
                 <tr>
-                    <th>Catalog Number</th>
-                    <td>{{ catalog_number }}</td>
+                    <th class="body-1 secondary-text">Catalog Number</th>
+                    <td class="body-1 primary-text text-right">{{ catalog_number }}</td>
                 </tr>
-                {{ endif }}
+                {{ /if }}
                 {{ if recording_url }}
                 <tr>
-                    <th>Website</th>
-                    <td><a class="link" href="{{ recording_url }}" title="{{ publisher_title }}">Visit Site</a></td>
+                    <td colspan="2">
+                        <div class="pad">
+                            <a class="button block link" href="{{ recording_url }}" title="{{ publisher_title }}">Visit site for more information</a>
+                        </div>
+                    </td>
                 </tr>
-                {{ endif }}
+                {{ /if }}
             </tbody>
         </table>
+        {{ /if }}
+
+        {{ if show_learn_more }}
+        <div class="pad-vertical text-center">
+            <a class="button border" href="/recordings">Learn More</a>
+        </div>
+        {{ /if }}
     </div>
 </article>
