--- a/_themes/tm3/templates/applause.html
+++ b/_themes/tm3/templates/applause.html
@@ -1,11 +1,11 @@
-{{ theme:partial src="hero" use_context="true" }}
+{{ theme:partial half_size="true" src="hero" use_context="true" }}
 
 <main id="content" role="main" style="background-color: {{ background_color }};">
-    <div class="grid-pad">
-        <div class="grid quotes">
+    <div class="pad">
+        <div class="row quotes">
             {{ entries:listing conditions="adams_press:!1" folder="quotes" show_hidden="true" sort_by="random" }}
                 <div class="col-1-2">
-                    <div class="grid-pad">
+                    <div class="pad">
                         {{ theme:partial src="quote" use_context="true" }}
                     </div>
                 </div>
