--- a/_themes/tm3/templates/biography.html
+++ b/_themes/tm3/templates/biography.html
@@ -1,17 +1,15 @@
 {{ theme:partial src="hero" use_context="true" }}
 
 <main id="content" role="main" style="background-color: {{ background_color }};">
-    <div class="grid-pad">
-        <div class="grid">
-            {{ content|widont }}
+    <div class="pad">
+        {{ content|widont }}
 
-            {{ if pdfs }}
-            <div class="grid pad text-center">
-                {{ pdfs }}
-                <a class="button pad xx-small download" href="{{ download file="{pdf}" as="{pdf}" }}">{{ label }}</a>
-                {{ /pdfs }}
-            </div>
-            {{ endif }}
+        {{ if pdfs }}
+        <div class="grid pad text-center">
+            {{ pdfs }}
+            <a class="button download" href="{{ download file="{pdf}" as="{pdf}" }}">{{ label }}</a>
+            {{ /pdfs }}
         </div>
+        {{ endif }}
     </div>
 </main>
