--- a/_themes/tm3/templates/home.html
+++ b/_themes/tm3/templates/home.html
@@ -1,68 +1,61 @@
-{{ theme:partial src="hero" }}
+{{ theme:partial half_size="true" src="hero" }}
 
 <section id="content" style="background-color: {{ background_color }};">
-    <div class="grid-pad">
-        <h2 class="style-1">Latest Release</h2>
+    <div class="row pad">
+        <h2 class="display-1">Latest Release</h2>
+    </div>
 
-        <div class="grid-pad negative">
-            <div class="col-2-3">
-                {{ entries:listing folder="recordings" limit="1" show_hidden="true" show_samples="false" sort_by="datestamp" sort_dir="desc" }}
-                {{ theme:partial src="recording" use_context="true" }}
-                {{ /entries:listing }}
-            </div>
-            <div class="col-1-3 aside">
+    <div class="row pad-horizontal">
+        <div class="col-2-3">
+            {{ entries:listing folder="recordings" limit="1" show_hidden="true" sort_by="datestamp" sort_dir="desc" }}
+            {{ theme:partial src="recording" show_learn_more="true" split_layout="true" use_context="true" }}
+            {{ /entries:listing }}
+        </div>
+        <div class="col-1-3">
+            <div class="pad card">
                 {{ entries:listing folder="news" limit="1" sort_by="datestamp" sort_dir="desc" }}
                 {{ theme:partial src="article" truncate="true" use_context="true" }}
 
-                <div class="grid pad text-center">
-                    <a class="button light x-small" href="{{ url }}">Full Article</a>
+                <div class="text-center">
+                    <a class="button link" href="{{ url }}">Full Article</a>
                 </div>
                 {{ /entries:listing }}
             </div>
         </div>
-
-        <div class="grid pad text-center">
-            <a class="button small" href="/recordings">All Recordings</a>
-        </div>
     </div>
 
-    <div class="grid-pad">
-        <h2 class="style-1">Upcoming Performances</h2>
+    <div class="row pad">
+        <h2 class="display-1">Upcoming Performances</h2>
+    </div>
+    <div class="row">
+        {{ theme:partial src="performances" limit="{upcoming_performances_total}" since="Today" }}
+    </div>
 
-        <div class="grid negative">
-            {{ theme:partial src="performances" limit="{upcoming_performances_total}" since="Today" }}
-        </div>
-
-        <div class="grid pad text-center">
-            <a class="button small" href="/performances">All Performances</a>
-        </div>
+    <div class="row pad text-center">
+        <a class="button border" href="/performances">All Performances</a>
     </div>
 
     {{ get_content from="live-recordings" show_hidden="true" }}
-    <div class="grid-pad no-padding-bottom" id="live-recordings">
-        <h2 class="style-1">{{ title }}</h2>
+    <div class="row pad">
+        <h2 class="display-1">{{ title }}</h2>
+    </div>
 
-        <div class="grid-pad negative">
-            <div class="col-1-2">
-                <div class="grid negative hero" style="background-image: url({{ artwork }}); background-position: {{ vertical_position }} {{ horizontal_position }};"></div>
-            </div>
-            <div class="col-1-2 aside">
-                <ul id="live-recordings-list">
-                    {{ entries:listing folder="live-recordings" show_hidden="true" sort_dir="asc" }}
-                    <li>
-                        <article class="grid" id="{{ slug }}">
-                            <div class="col-3-4">
-                                <h4>{{ title }}</h4>
-                                <h5>{{ composer }}</h5>
-                            </div>
-                            <div class="col-1-4 text-right">
-                                <a class="sample light button x-small pad" data-icon="play" href="{{ sample }}">Play Sample</a>
-                            </div>
-                        </article>
-                    </li>
-                    {{ /entries:listing }}
-                </ul>
-            </div>
+    <div class="row" id="live-recordings">
+        <div class="col-1-2">
+            <img alt="" src="{{ artwork }}">
+        </div>
+        <div class="col-1-2">
+            <ul class="list" id="live-recordings-list">
+                {{ entries:listing folder="live-recordings" show_hidden="true" sort_dir="asc" }}
+                <li class="pad-half divider-dark">
+                    <article class="row" id="{{ slug }}">
+                        <h4 class="title">{{ title }}</h4>
+                        <h5 class="subhead">{{ composer }}</h5>
+                        <a class="button positioned right sample" data-icon="play" href="{{ sample }}">Play</a>
+                    </article>
+                </li>
+                {{ /entries:listing }}
+            </ul>
         </div>
     </div>
     {{ /get_content }}
